Downloading files with FileSaver

--- a/projects/web/app/views/_layout/layout.html
+++ b/projects/web/app/views/_layout/layout.html
@@ -36,6 +36,8 @@
         <script type="text/javascript" src="@{'/public/lib/multi-select/js/jquery.multi-select.js'}"></script>
         <script type="text/javascript" src="@{'/public/lib/datatables/jquery.dataTables.min.js'}"></script>
         <script type="text/javascript" src="@{'/public/lib/datatables/dataTables.bootstrap4.min.js'}"></script>
+        <script type="text/javascript" src="@{'/public/lib/file-saver/Blob.js'}"></script>
+        <script type="text/javascript" src="@{'/public/lib/file-saver/FileSaver.min.js'}"></script>
 
         <script type="text/javascript">
             // Date picker
